--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wild-List</title>
-        <link rel="stylesheet" href="assets/style/styles.css">
+        <link rel="stylesheet" href="assets\style\style.css">
     </head>
     <body>
         
@@ -40,11 +40,9 @@
 
                     <!-- Ajout de liste/tache -->
                 <div class="container-new-task">
-                    <div class="btn-new-task">
-
-                    </div>
+                        <button class="btn-new-task">+ New list</button>
                     <div class="new-task">
-
+                        <input value="Add new task" class="input-new-task">
                     </div>
                 </div>
 
