Formated data determined

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="assets/media/logo.svg" alt="" />
             <img src="assets/media/Todo.svg" alt="" />
           </div>
-
+          
           <!-- Partie Profil -->
           <div class="nav-right">
             <img src="assets/media/login.svg" alt="" />
@@ -40,7 +40,7 @@
             <li class="active">contact a friend</li>
             <li class="active">medidate</li>
           </ul>
-          <p>^</p>
+          <p><i class="fa-solid fa-chevron-up"></i></p>
         </div>
 
         <!-- Ajout de liste/tache -->
@@ -61,7 +61,7 @@
                 </select>
                 <button class="btn-details" id="btn-category">
                   <span>Category</span>
-                  <img src="assets\media\label_1f3f7-fe0f.png" />
+                  <img src="assets\media\label_1f3f7-fe0f.png"/>
                 </button>
               </div>
               <div>
