--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <label for="priority"></label>
                 <select name="priority" id="priority" class="input-details">
                   <option value="">--Priority--</option>
-                  <option value="1">Low</option>
-                  <option value="2">Medium</option>
-                  <option value="3">High</option>
+                  <option value=1>Low</option>
+                  <option value=2>Medium</option>
+                  <option value=3>High</option>
                 </select>
                 <button class="btn-details" id="btn-priority">
                   <span>Priority</span>
