--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
           <div class="progress-bar">
             <div class="progress"></div>
           </div>
-          <ul>
-            <li>go for a walk</li>
-            <li class="active">contact a friend</li>
-            <li class="active">medidate</li>
+          <ul class="daylies-task">
+            <li class="daylies-toggle">for a walk</li>
+            <li class="daylies-toggle">contact a friend</li>
+            <li class="daylies-toggle">medidate</li>
           </ul>
-          <p>^</p>
+         <p class="toggle"><i class="fa-solid fa-chevron-up icon-daylies"></i></p>
+          <!-- <p><i class="fa-solid fa-chevron-up icon-daylies"></i></p> -->
         </div>
 
         <!-- Ajout de liste/tache -->
@@ -135,3 +136,15 @@
     <script src="https://kit.fontawesome.com/d094d82007.js" crossorigin="anonymous"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
