--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
             <form class="details-container">
               <div>
                 <label for="category"></label>
-                <select name="category" id="category" class="input-details">
+                <!-- <select name="category" id="category" class="input-details" hidden>
                   <option value="">Category</option>
-                </select>
+                </select> -->
+                <input type="text" id="category" class="input-details" list="datalist" hidden/>
+                <datalist id="datalist">
+                  <option value="">Category</option>
+                </datalist>
                 <button class="btn-details" id="btn-category">
                   <span>Category</span>
                   <img src="assets\media\label_1f3f7-fe0f.png" />
@@ -73,6 +77,7 @@
                   id="deadline"
                   class="input-details"
                   value=""
+                  hidden
                 />
                 <button class="btn-details" id="btn-deadline">
                   <span>Deadline</span>
@@ -81,8 +86,8 @@
               </div>
               <div>
                 <label for="priority"></label>
-                <select name="priority" id="priority" class="input-details">
-                  <option value="">--Priority--</option>
+                <select name="priority" id="priority" class="input-details" hidden>
+                  <option value="">Priority</option>
                   <option value=low-priority>Low</option>
                   <option value=medium-priority>Medium</option>
                   <option value=high-priority>High</option>
@@ -93,7 +98,7 @@
                 </button>
               </div>
               <div class="btn-validate-cancel">
-                <input type="submit" id="btn-validate" value="Add" />
+                <input type="submit" id="btn-validate" value="Add" title="" disabled/>
                 <button id="btn-cancel">X</button>
               </div>
             </form>
@@ -133,6 +138,5 @@
     </div>
     <script src="./assets/script/script.js"></script>
     <script src="https://kit.fontawesome.com/d094d82007.js" crossorigin="anonymous"></script>
-        <script src="./assets/script/calls.js"></script>
   </body>
 </html>
