added function to format date value

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
               placeholder="New task"
               id="input-new-task"
               class="input-new-task"
+              value=""
             />
             <hr class="line">
             <form class="details-container">
