--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
 
           <!-- Partie Profil -->
           <div class="nav-right">
-            <img src="assets/media/login.svg" alt="" />
+            <img class="lolo" src="assets/media/login.svg" alt="" />
+            <div class="online">
+              <img src="assets/media/Ellipse_8.svg" alt="" />
+            </div>
           </div>
-          <div class="online">
-            <img src="assets/media/Ellipse_8.svg" alt="" />
-          </div>
+          
         </nav>
+
+        <div class="login" id="locontain">
+          <span>Patrick</span>
+          <div class="Line-5"></div>
+          <span class="logset">Settings</span>
+          <span class="logset">Logout</span>
+        </div>
       </header>
 
       <main>
