--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <option value="">Category</option>
                 </datalist>
                 <button class="btn-details" id="btn-category">
-                  <span hidden>Category</span>
+                  <span>Category</span>
                   <img src="assets\media\label_1f3f7-fe0f.png" />
                 </button>
               </div>
@@ -74,23 +74,23 @@
                   id="deadline"
                   class="input-details"
                   value=""
-      
+                  hidden
                 />
                 <button class="btn-details" id="btn-deadline">
-                  <span hidden>Deadline</span>
+                  <span>Deadline</span>
                   <img src="assets\media\calendar_1f4c5.png" />
                 </button>
               </div>
               <div>
                 <label for="priority"></label>
-                <select name="priority" id="priority" class="input-details" >
+                <select name="priority" id="priority" class="input-details" hidden>
                   <option value="">Priority</option>
                   <option value=low-priority>Low</option>
                   <option value=medium-priority>Medium</option>
                   <option value=high-priority>High</option>
                 </select>
                 <button class="btn-details" id="btn-priority">
-                  <span hidden>Priority</span>
+                  <span>Priority</span>
                   <img src="assets\media\warning_26a0-fe0f.png" />
                 </button>
               </div>
