add alt for img in html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </datalist>
                 <button class="btn-details" id="btn-category">
                   <span>Category</span>
-                  <img src="assets\media\label_1f3f7-fe0f.png" />
+                  <img src="assets\media\label_1f3f7-fe0f.png" alt="label tag"/>
                 </button>
               </div>
               <div>
@@ -82,7 +82,7 @@
                 />
                 <button class="btn-details" id="btn-deadline">
                   <span>Deadline</span>
-                  <img src="assets\media\calendar_1f4c5.png" />
+                  <img src="assets\media\calendar_1f4c5.png" alt="calendar"/>
                 </button>
               </div>
               <div>
@@ -95,7 +95,7 @@
                 </select>
                 <button class="btn-details" id="btn-priority">
                   <span>Priority</span>
-                  <img src="assets\media\warning_26a0-fe0f.png" />
+                  <img src="assets\media\warning_26a0-fe0f.png" alt="warning sign"/>
                 </button>
               </div>
               <div class="btn-validate-cancel">
