--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           
           <!-- Partie Profil -->
           <div class="nav-right">
+            <p class="nav-desktop-date" hidden>Lundi 26 Mars, 11:56</p>
             <img src="assets/media/login.svg" alt="" />
           </div>
           <div class="online">
@@ -30,26 +31,29 @@
 
       <main>
         <!-- Daylies challenges-->
-        <div class="daylies">
-          <h1>daylies</h1>
-          <div class="progress-bar">
-            <div class="progress"></div>
+        <div class="desktop-left">
+          <div class="daylies">
+            <h1>daylies</h1>
+            <div class="progress-bar">
+              <div class="progress"></div>
+            </div>
+            <ul class="daylies-task">
+              <li class="daylies-toggle">allez en promenade</li>
+              <li class="daylies-toggle">contactez un ami</li>
+              <li class="daylies-toggle">mediter</li>
+            </ul>
+           <p class="toggle"><i class="fa-solid fa-chevron-up icon-daylies"></i></p>
+            <!-- <p><i class="fa-solid fa-chevron-up icon-daylies"></i></p> -->
           </div>
-          <ul class="daylies-task">
-            <li class="daylies-toggle">go for a walk</li>
-            <li class="daylies-toggle">contact a friend</li>
-            <li class="daylies-toggle">medidate</li>
-          </ul>
-         <p class="toggle"><i class="fa-solid fa-chevron-up icon-daylies"></i></p>
-          <!-- <p><i class="fa-solid fa-chevron-up icon-daylies"></i></p> -->
         </div>
 
-        <!-- Ajout de liste/tache -->
+        <div class="desktop-right">
+          <!-- Ajout de liste/tache -->
         <div class="container-new-task">
-          <button type="button" class="btn-new-task"><i class="fa-sharp fa-solid fa-plus plus-icon"></i>New task</button>
+          <button type="button" class="btn-new-task"><i class="fa-sharp fa-solid fa-plus plus-icon"></i>Ajouter une tâche</button>
           <div class="new-task">
             <input
-              placeholder="New task"
+              placeholder="Nouvelle tâche"
               id="input-new-task"
               class="input-new-task"
             />
@@ -62,7 +66,7 @@
                   <option value="">Category</option>
                 </datalist>
                 <button class="btn-details" id="btn-category">
-                  <span>Category</span>
+                  <span>Categorie</span>
                   <img src="assets\media\label_1f3f7-fe0f.png" />
                 </button>
               </div>
@@ -84,19 +88,19 @@
               <div>
                 <label for="priority"></label>
                 <select name="priority" id="priority" class="input-details" hidden>
-                  <option value="">Priority</option>
-                  <option value=low-priority>Low</option>
-                  <option value=medium-priority>Medium</option>
-                  <option value=high-priority>High</option>
+                  <option value="">Priorité</option>
+                  <option value=low-priority>Basse</option>
+                  <option value=medium-priority>Moyenne</option>
+                  <option value=high-priority>Haute</option>
                 </select>
                 <button class="btn-details" id="btn-priority">
-                  <span>Priority</span>
+                  <span>Priorité</span>
                   <img src="assets\media\warning_26a0-fe0f.png" />
                 </button>
               </div>
               <div class="btn-validate-cancel">
-                <input type="submit" id="btn-validate" value="Add" title="" disabled/>
-                <button id="btn-cancel">X</button>
+                <button type="submit" id="btn-validate" value="" title="" disabled><span>+</span><span>Ajouter</span></button>
+                <button id="btn-cancel"><span>X</span><span>Annuler</span></button>
               </div>
             </form>
           </div>
@@ -133,31 +137,8 @@
                 </ul>
               </div>
             </div>
-            <div class="task low-priority flex">
-              <input type="checkbox" />
-              <p class="task-name">Arroser les plantes</p>
-              <p class="task-date">22/03</p>
-              <button class="edit-task">···</button>
-              <div class="task-menu" hidden>
-                <ul class="task-menu-option">
-                  <li class="task-menu-option-priority">Priorité</li>
-                  <li class="task-menu-option-delete">Supprimer</li>
-                </ul>
-              </div>
-            </div>
-            <div class="task high-priority flex">
-              <input type="checkbox" />
-              <p class="task-name">Laver la voiture</p>
-              <p class="task-date">17/03</p>
-              <button class="edit-task">···</button>
-              <div class="task-menu" hidden>
-                <ul class="task-menu-option">
-                  <li class="task-menu-option-priority">Priorité</li>
-                  <li class="task-menu-option-delete">Supprimer</li>
-                </ul>
-              </div>
-            </div>
           </div> -->
+        </div>
         </div>
       </main>
 
