Display date/time added to desktop

--- a/index.html
+++ b/index.html
@@ -34,15 +34,22 @@
         <div class="desktop-left">
           <div class="daylies">
             <h1>daylies</h1>
+  
+            <div class="container-input-daylies">
+              <i class="fa-sharp fa-solid fa-plus plus-icon plus-quoti"></i>
+            </div>
+  
             <div class="progress-bar">
               <div class="progress"></div>
             </div>
             <ul class="daylies-task">
-              <li class="daylies-toggle">allez en promenade</li>
-              <li class="daylies-toggle">contactez un ami</li>
-              <li class="daylies-toggle">mediter</li>
+              <li class="daylies-toggle">go for a walk</li>
+              <li class="daylies-toggle">contact a friend</li>
+              <li class="daylies-toggle">meditate</li>
             </ul>
-           <p class="toggle"><i class="fa-solid fa-chevron-up icon-daylies"></i></p>
+            <p class="toggle">
+              <i class="fa-solid fa-chevron-up icon-daylies"></i>
+            </p>
             <!-- <p><i class="fa-solid fa-chevron-up icon-daylies"></i></p> -->
           </div>
         </div>
@@ -50,7 +57,7 @@
         <div class="desktop-right">
           <!-- Ajout de liste/tache -->
         <div class="container-new-task">
-          <button type="button" class="btn-new-task"><i class="fa-sharp fa-solid fa-plus plus-icon"></i>Ajouter une tâche</button>
+          <button type="button" class="btn-new-task"><i class="fa-sharp fa-solid fa-plus plus-icon plus"></i>Ajouter une tâche</button>
           <div class="new-task">
             <input
               placeholder="Nouvelle tâche"
